# session-based-spa

./: .gitignore  README.md
spa-backend/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
spa-backend/accounts/: serializers.py  urls.py  views_with_csrf_token.py  views_wo_csrf_token.py
spa-backend/reminders/: admin.py  models.py  serializers.py  urls.py  views.py
spa-backend/reminders/migrations/: 0001_initial.py
spa-backend/spa_backend/: asgi.py  settings.py  urls.py  wsgi.py
web-app/: package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.js  config.js
web-app/src/components/: Header.js  Link.js  ReminderList.js  Route.js
web-app/src/contexts/: user.js
web-app/src/hooks/: useIsMounted.js
web-app/src/pages/: Login.js  Reminders.js
web-app/src/services/: api.js
